# grim

./: README.md  pyproject.toml
grimx/: build.py  cli.py  cmake_patch.py  config.py  doctor.py  install.py  scaffold.py
grimx/templates/c/: CMakeLists.txt
grimx/templates/c/src/: main.c
grimx/templates/cpp/: CMakeLists.txt
